logs/collective.synchro.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/synchro'...
Listing './lib/python3.5/site-packages/collective/synchro/browser'...
Listing './lib/python3.5/site-packages/collective/synchro/browser/images'...
Listing './lib/python3.5/site-packages/collective/synchro/buildout'...
Listing './lib/python3.5/site-packages/collective/synchro/buildout/plone_25'...
Compiling './lib/python3.5/site-packages/collective/synchro/buildout/plone_25/bootstrap.py'...
***   File "./lib/python3.5/site-packages/collective/synchro/buildout/plone_25/bootstrap.py", line 31
    exec urllib2.urlopen('http://peak.telecommunity.com/dist/ez_setup.py'
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/synchro/buildout/plone_30'...
Compiling './lib/python3.5/site-packages/collective/synchro/buildout/plone_30/bootstrap.py'...
***   File "./lib/python3.5/site-packages/collective/synchro/buildout/plone_30/bootstrap.py", line 31
    exec urllib2.urlopen('http://peak.telecommunity.com/dist/ez_setup.py'
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/synchro/config.py'...
***   File "./lib/python3.5/site-packages/collective/synchro/config.py", line 36
    except ImportError,e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/synchro/doctests'...
Compiling './lib/python3.5/site-packages/collective/synchro/events.py'...
***   File "./lib/python3.5/site-packages/collective/synchro/events.py", line 39
    print "je passe dans collective.synchro"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective/synchro/interfaces'...
Listing './lib/python3.5/site-packages/collective/synchro/plugins'...
Listing './lib/python3.5/site-packages/collective/synchro/profiles'...
Listing './lib/python3.5/site-packages/collective/synchro/profiles/default'...
Compiling './lib/python3.5/site-packages/collective/synchro/queues.py'...
***   File "./lib/python3.5/site-packages/collective/synchro/queues.py", line 71
    except PickleError ,e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/synchro/scripts'...
Compiling './lib/python3.5/site-packages/collective/synchro/scripts/synchro_queues.py'...
***   File "./lib/python3.5/site-packages/collective/synchro/scripts/synchro_queues.py", line 156
    except IOError,e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/synchro/scripts/utils.py'...
***   File "./lib/python3.5/site-packages/collective/synchro/scripts/utils.py", line 94
    except ValueError,e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/synchro/tools.py'...
***   File "./lib/python3.5/site-packages/collective/synchro/tools.py", line 59
    except CompilerError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective.synchro-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
